--- a/mota/mdk/Makefile
+++ b/mota/mdk/Makefile
@@ -2,12 +2,14 @@ CXX_FLAGS   := -std=c++11 -ggdb3 -Wall -Werror
 AR_FLAGS    = crs
 MUDUO_DIR  := ../../muduo_stdc11
 MOTA_DIR := ../../
+HTTP_PARSER_DIR := ../../http-parser
 
 include $(MOTA_DIR)/tool-chain.mk
 
 INC     := .
 INC     += $(MUDUO_DIR)
 INC     += $(MOTA_DIR)
+INC     += $(HTTP_PARSER_DIR)
 
 INC_FLAGS := $(foreach path, $(INC), -I$(path))
 
